<resources>
    <string name="app_name">Transaction</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">New Product</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_database">Delete Database</string>
    <string name="tags">Tags</string>
    <string name="products">Products</string>
    <string name="product_editor">Product Editor</string>
    <string name="action_save_product">Save</string>
    <string name="loading">Loading...</string>
    <string name="action_new_tag">New</string>
    <string name="action_save_tag">Save</string>
    <string name="saving">Saving...</string>
    <string name="error_tag_name_empty">Tag name is required.</string>
    <string name="error_product_name_empty">Product name is required.</string>
    <string name="action_new_product">New Product</string>
    <string name="tag_editor">Tag Editor</string>
    <string name="search_box_hint">Search</string>
    <string name="retry_hint">Tag to reload</string>
    <string name="no_search_result">Sorry, no search result</string>
    <string name="no_result">No result</string>
    <string name="calculator_title">New Transaction</string>
    <string name="incoming">Earn</string>
    <string name="outgoing">Expense</string>
    <string name="flag_incoming">EARN</string>
    <string name="flag_outgoing">EXPENSE</string>
    <string name="ok">OK</string>
    <string name="title_activity_product_editor">Product Editor</string>

    <string name="hello_world">Hello world!</string>
    <string name="new_tag">New Tag</string>
    <string name="tag_hint">Type new tag names below, separate multiple tags with space. For example: food fruit</string>
    <string name="today_transactions_amount">Today amount</string>
    <string name="validation_error_input_price">Please input price.</string>
    <string name="validation_error_choose_product">Please choose product.</string>
    <string name="validation_error_choose_transaction_type">Please choose transaction type.</string>
    <string name="dialog_title_choose_currency">Choose Currency</string>
    <string name="action_delete_product">Delete</string>
    <string name="confirm_message_delete_products">Are you sure to delete the selected %d products?</string>
    <string name="clone_database">Clone Database</string>
    <string name="validation_error_product_name_duplicate">Product name is duplicate, please change another one.</string>
    <string name="unlock">Unlock</string>
    <string name="no_product">No product found</string>
    <string name="search">Search</string>
    <string name="dashboard">Dashboard</string>
    <string name="transactions">Transactions</string>
    <string name="analysis_fragment_title">Analysis</string>
    <string name="analysis">Analysis</string>
    <string name="no_transaction">No transaction</string>
    <string name="action_button_take_photo">Take Photo</string>
    <string name="action_button_choose_date">Choose Date</string>
    <string name="action_button_scan_barcode">Scan Barcode</string>
    <string name="action_button_new_product">New Product</string>
    <string name="transaction_date">Date: %s</string>
    <string name="title_activity_transaction_list">Transactions</string>
    <string name="transaction_navigator_by_day">By Day</string>
    <string name="transaction_navigator_by_week">By Week</string>
    <string name="transaction_navigator_by_month">By Month</string>
    <string name="transaction_navigator_by_year">By Year</string>
    <string name="title_activity_barcode_scanner">Scan Barcode</string>
    <string name="create_product">Create new product</string>
    <string name="create_or_search_product">Create or Search Product</string>
    <string name="label_product_name">Product Name</string>
    <string name="loading_msg_creating_product">Creating new product, please wait...</string>
    <string name="photo_picker_take_from_camera">Take from camera</string>
    <string name="photo_picker_select_from_gallery">Select from gallery</string>
    <string name="photo_picker_select_image">Select Photo</string>
    <string name="photo_picker_choose_photo_from_gallery">Choose a Photo</string>
    <string name="quantity">Quantity</string>
    <string name="validation_error_empty_quantity">Please input quantity</string>
    <string name="validation_error_invalid_quantity">Quantity is invalid</string>
    <string name="validation_error_invalid_price">Price is invalid</string>
    <string name="today">Today</string>
    <string name="home">Home</string>
    <string name="execute_sql">Execute SQL</string>
    <string name="new_transaction">New Transaction</string>
    <string name="empty" />
    <string name="erase">Erase</string>
    <string name="remove">Remove</string>
    <string name="rename">Rename</string>
    <string name="name_duplicate">This name has already been taken. Please change another one.</string>
    <string name="fail_rename_product">Rename failed, please try again.</string>
    <string name="confirm_remove_product">Are you sure you want to remove this product?</string>
    <string name="msg_confirm_remove_transactions">Are you sure you want to remove the selected transactions?</string>
    <string name="hint_transaction_description">Input notes here</string>
    <string name="msg_update_transaction_failed">Failed to update transaction information, please try again later.</string>
    <string name="sql">CREATE TABLE "photo" ("id" INTEGER PRIMARY KEY  AUTOINCREMENT  NOT NULL , "url" TEXT NOT NULL, "description" TEXT, "last_modified" DATETIME DEFAULT current_timestamp, "creation_time" DATETIME NOT NULL  DEFAULT current_timestamp, "account_id" INTEGER NOT NULL , "active" BOOL NOT NULL  DEFAULT true, "sync_state" INTEGER NOT NULL  DEFAULT 0, "sync_batch_id" TEXT NOT NULL  DEFAULT "")</string>
    <string name="error_add_photo">Failed to add photo, please try again later.</string>
    <string name="creation_time">Creation time:&#160;</string>
    <string name="photos">Photos</string>
    <string name="total_photo_count">%d photos</string>
    <string name="error_toggle_transaction_star">Sorry, toggle star failed.</string>
    <string name="hint_type_product_name">Type Product Name</string>
    <string name="default_currency_code">USD</string>
    <string name="error_invalid_photo_url">The photo link is invalid.</string>
    <string name="photo_list">Photos</string>
    <string name="msg_confirm_remove_transaction">Are you sure you want to remove this transaction?</string>
    <string name="selected_count_text_format">%d selected</string>
    <string name="action_mode_title_select_transactions">Select Transactions</string>
    <string name="msg_confirm_remove_product">Are you sure you want to remove this product?</string>
    <string name="action_mode_title_select_products">Select Products</string>
    <string name="search_product">Type product name</string>
    <string name="title_rename_tag">Rename tag</string>
    <string name="error_tag_rename_failed">Sorry, failed to rename this tag, please try again later.</string>
    <string name="error_duplicate_tag_name">Sorry, this name already be taken, please try another one.</string>
    <string name="input_new_account_name">New account name</string>
    <string name="error_failed_to_update_account_display_name">Sorry, failed to update account display name, please try again later.</string>
    <string name="error_failed_to_update_avator">Sorry, failed to update your avator, please try again later.</string>
    <string name="action_bar_title_exchange_rate_list">Exchange Rate</string>
    <string name="no_exchange_rate">No exchange rate</string>
    <string name="title_change_exchange_rate">Change Exchange Rate</string>
    <string name="search_exchange_rate">Type Currency Code</string>
    <string name="error_failed_to_update_exchange_rate">Sorry, failed to update the exchange rate, please try again later.</string>
    <string name="title_new_tag">Create new tag</string>
</resources>
