<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_calculator"
            android:icon="@android:drawable/ic_menu_send"
            android:orderInCategory="0"
            android:title="@string/calculator_title" />
        <item
            android:id="@+id/navigation_item_dashboard"
            android:icon="@android:drawable/ic_menu_send"
            android:orderInCategory="1"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/navigation_item_transactions"
            android:icon="@android:drawable/ic_menu_send"
            android:orderInCategory="2"
            android:title="@string/transactions" />
        <item
            android:id="@+id/navigation_item_analysis"
            android:icon="@android:drawable/ic_menu_send"
            android:orderInCategory="3"
            android:title="@string/analysis" />

        <item
            android:id="@+id/navigation_item_products"
            android:icon="@android:drawable/ic_menu_send"
            android:orderInCategory="4"
            android:title="@string/products" />
        <item
            android:id="@+id/navigation_item_tags"
            android:icon="@android:drawable/ic_menu_send"
            android:orderInCategory="5"
            android:title="@string/tags" />
    </group>

</menu>
